test_regress/t/t_randomize_rand_mode_unsup.out
%Error-UNSUPPORTED: t/t_randomize_rand_mode_unsup.v:16:20: Unsupported: 'rand_mode()' on dynamic array element
                                                         : ... note: In instance 't'
   16 |     p.m_dyn_arr[0].rand_mode(0);
      |                    ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randomize_rand_mode_unsup.v:17:20: Unsupported: 'rand_mode()' on unpacked array element
                                                         : ... note: In instance 't'
   17 |     p.m_unp_arr[0].rand_mode(0);
      |                    ^~~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_rand_mode_unsup.v:18:18: Unsupported: 'rand_mode()' on unpacked struct element
                                                         : ... note: In instance 't'
   18 |     p.m_struct.y.rand_mode(0);
      |                  ^~~~~~~~~
%Error: Exiting due to
